重构代码以优化伺服器控制和数据处理，更新间隔时间，改进API交互
Signed-off-by: qingmo <qmswf.27@gmail.com>

--- a/test1.html
+++ b/test1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JSON API Demo</title>
+  <title>四足机器人控制</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,20 +25,19 @@
 </head>
 <body>
 
-  <h1>JSON API 按钮示例</h1>
+  <h1>控制按键</h1>
   
-  <!-- 按键区，数字1到10的JSON值 -->
   <div>
-    <button onclick="sendJson(1)">JSON 1</button>
-    <button onclick="sendJson(2)">JSON 2</button>
-    <button onclick="sendJson(3)">JSON 3</button>
-    <button onclick="sendJson(4)">JSON 4</button>
-    <button onclick="sendJson(5)">JSON 5</button>
-    <button onclick="sendJson(6)">JSON 6</button>
-    <button onclick="sendJson(7)">JSON 7</button>
-    <button onclick="sendJson(8)">JSON 8</button>
-    <button onclick="sendJson(9)">JSON 9</button>
-    <button onclick="sendJson(10)">JSON 10</button>
+    <button onclick="sendJson(1)">时间</button>
+    <button onclick="sendJson(2)">天气</button>
+    <button onclick="sendJson(3)">立正</button>
+    <button onclick="sendJson(4)">前进</button>
+    <button onclick="sendJson(5)">后退</button>
+    <button onclick="sendJson(6)">左转</button>
+    <button onclick="sendJson(7)">右转</button>
+    <button onclick="sendJson(8)">动作1</button>
+    <button onclick="sendJson(9)">动作2</button>
+    <button onclick="sendJson(10)">动作3</button>
   </div>
 
   <!-- 获取和清空数据的按键 -->
