增加机器人控制功能，添加原地左转、原地右转和上推功能，删除AHT10传感器相关代码，优化网页重定向和串口通信设置
Signed-off-by: qingmo <qmswf.27@gmail.com>

--- a/test1.html
+++ b/test1.html
@@ -35,9 +35,9 @@
     <button onclick="sendJson(5)">后退</button>
     <button onclick="sendJson(6)">左转</button>
     <button onclick="sendJson(7)">右转</button>
-    <button onclick="sendJson(8)">动作1</button>
-    <button onclick="sendJson(9)">动作2</button>
-    <button onclick="sendJson(10)">动作3</button>
+    <button onclick="sendJson(8)">原地左转</button>
+    <button onclick="sendJson(9)">原地右转</button>
+    <button onclick="sendJson(10)">上推</button>
   </div>
 
   <!-- 获取和清空数据的按键 -->
