移除不必要的代码注释，优化天气和句子获取逻辑，增加新的机器人舞蹈功能，重构数据处理流程
Signed-off-by: qingmo <qmswf.27@gmail.com>

--- a/test1.html
+++ b/test1.html
@@ -28,16 +28,17 @@
   <h1>控制按键</h1>
   
   <div>
-    <button onclick="sendJson(1)">时间</button>
-    <button onclick="sendJson(2)">天气</button>
-    <button onclick="sendJson(3)">立正</button>
-    <button onclick="sendJson(4)">前进</button>
-    <button onclick="sendJson(5)">后退</button>
-    <button onclick="sendJson(6)">左转</button>
-    <button onclick="sendJson(7)">右转</button>
-    <button onclick="sendJson(8)">原地左转</button>
-    <button onclick="sendJson(9)">原地右转</button>
-    <button onclick="sendJson(10)">上推</button>
+    <button onclick="sendJson(1)">天气</button>
+    <button onclick="sendJson(2)">立正</button>
+    <button onclick="sendJson(3)">前进</button>
+    <button onclick="sendJson(4)">后退</button>
+    <button onclick="sendJson(5)">原地左转</button>
+    <button onclick="sendJson(6)">原地右转</button>
+    <button onclick="sendJson(7)">舞蹈1</button>
+    <button onclick="sendJson(8)">舞蹈2</button>
+    <button onclick="sendJson(9)">舞蹈3</button>
+    <button onclick="sendJson(10)">睡觉</button>
+    <button onclick="sendJson(11)">复位</button>
   </div>
 
   <!-- 获取和清空数据的按键 -->
